--- a/alephuba/templates/base.html
+++ b/alephuba/templates/base.html
@@ -1,8 +1,3 @@
-{% load active %}
-
-{% url documentos as url_busqueda_documentos %}
-{% url add_documento as url_agregar_documentos %}
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -51,8 +46,9 @@
         {% if user.is_authenticated %}
         <!-- You can name the links with lowercase, they will be transformed to uppercase by CSS, we prefered to name them with uppercase to have the same effect with disabled stylesheet -->
         <ul id="mainNav">
-        	<li><a class="{% active url_busqueda_documentos %}" href="{% url buscar %}">Buscar documento</a></li>
-        	<li><a class="{% active url_agregar_documentos %}" href="{% url add_documento %}">Subir documento</a></li>
+        	<li><a href="{% url buscar %}">Recientes</a></li>
+        	<li><a href="{% url busqueda_por_materia %}">Por materia</a></li>
+        	<li><a href="{% url add_documento %}">Subir documento</a></li>
         	<li class="quicksearch"><form id="qs_form" method="get" action="{% url buscar %}"><label for="id_{{ qs_form.qs_documento.name }}">Buscar:</label>{{ qs_form.qs_documento }}</form></li>
         </ul>
         
@@ -61,23 +57,6 @@
         
         <div id="containerHolder">
 			<div id="container">
-        		<div id="sidebar">
-        		{% block sidebar %}
-        		<!-- 
-                	<ul class="sideNav">
-                    	<li><a href="#">Exchange</a></li>
-                    	<li><a href="#" class="active">Print resources</a></li>
-                    	<li><a href="#">Training &amp; Support</a></li>
-                    	<li><a href="#">Books</a></li>
-                    	<li><a href="#">Safari books online</a></li>
-                    	<li><a href="#">Events</a></li>
-                    </ul>
-                     -->
-                    <!-- // .sideNav -->
-                {% endblock %}
-                </div>    
-                <!-- // #sidebar -->
-               
                <!-- 
                	<div class="breadcrumb">
                	{% block breadcrumbs%}
@@ -99,7 +78,8 @@
         </div>	
         <!-- // #containerHolder -->
         
-        <p id="footer">© 2011 chacholano. Template by <a href="http://www.perspectived.com">perspectived</a>.</p>
+        <p id="footer">© 2011 chacholano. <a href="#">Acerca de alephuba</a> | <a href="#">Contacto</a></p>
+        <!-- Template by <a href="http://www.perspectived.com">perspectived</a>. -->
     </div>
     <!-- // #wrapper -->
 </body>
