se copió el estilo del upload al resto de los forms

--- a/alephuba/media/css/layout.css
+++ b/alephuba/media/css/layout.css
@@ -157,10 +157,10 @@ h2 {
 #main table tr:hover .action a:hover { text-decoration: underline; }
 
 #main fieldset {
-	border: 1px solid #ddd;
-	padding: 19px;
-	margin: 0 0 20px 0;
-	background: #fbfbfb;
+	border: 0;
+	background: #FFFFFF;
+	margin: 0 0 0px;
+	padding: 20px 20px 5px;
 }
 
 #main fieldset p { margin: 0 0 8px 0; float: left; width: 100%;  }
@@ -323,41 +323,6 @@ h2 {
 * Buttons
 * ------------- */
 
-button {
-margin: 0px;
-padding: 0px 0px;
-border: none;
-background-color: transparent;
-cursor: pointer;
-height: 29px;
-display: block;
-float: left;
-overflow: visible;
-}
-
-*:first-child+html button[type]{width: 1;} /* IE7 */
-
-button span {
-background: transparent url(../img/btn_left.gif) no-repeat scroll right top;
-display: block;
-padding: 0px 10px 0px 0px; /* sliding doors padding */
-margin: 0px;
-
-}
-
-button span span {
-background: transparent url(../img/btn_right.gif) no-repeat left top;
-color: #646464;
-margin: 0;
-padding: 0 0 0 10px;
-font: 11px Arial, Helvetica, sans-serif;
-line-height: 29px;
-display: block;
-text-decoration: none;
-font-weight:bold;
-width: 50px;
-}
-
 #mainNav li.quicksearch {
 	float: right;
 	border-right: none;
@@ -417,12 +382,14 @@ border: 1px solid #ddd;
 	padding: 20px 20px 5px;
 	}
 
-#wizard_buttons {
+
+.buttons_container {
 	padding: 10px 0px 10px;
 	float:right;
 	}
 
-#wizard_buttons input {
+input[type=reset],
+input[type=submit] {
 	width: 90px;
 	border-radius: 4px 4px 4px 4px;
 	}
@@ -436,3 +403,10 @@ border: 1px solid #ddd;
 	margin-left: 10px;
 	padding-top: 10px;
 }
+
+#main .display-fieldset {
+	border: 1px solid #ddd;
+	padding: 19px;
+	margin: 0 0 20px 0;
+	background: #fbfbfb;
+	}
