--- a/alephuba/templates/documentos/add_documento.html
+++ b/alephuba/templates/documentos/add_documento.html
@@ -71,7 +71,7 @@
 		
 	</fieldset>
 	
-	<div id="wizard_buttons"> 							
+	<div id="wizard_buttons" class="buttons_container"> 							
 		<input class="navigation_button" id="back" value="Back" type="reset" />
 		<input class="navigation_button" id="next" value="Next" type="submit" />
 	</div>
