--- a/alephuba/templates/mi_cuenta.html
+++ b/alephuba/templates/mi_cuenta.html
@@ -4,7 +4,7 @@
 
 <h2>Mi cuenta</h2>
 
-<fieldset>
+<fieldset class="display-fieldset">
 	<p><label>Usuario:</label></p><p>{{ user.username }}</p><p/>
 	<p><label>Email:</label></p><p>{{ user.email }}</p><p/>
 	{% if user.profile.carrera %} 
