--- a/alephuba/templates/form.html
+++ b/alephuba/templates/form.html
@@ -1,16 +1,18 @@
-<form action="" {{enctype|default:''}} method="{{ method|default:'post' }}">{% csrf_token %}
-   	<fieldset>
+<form class="ui-formwizard ui-helper-reset ui-widget ui-widget-content ui-corner-all" action="" {{enctype|default:''}} method="{{ method|default:'post' }}">{% csrf_token %}
+   	<fieldset class="ui-corner-all">
 		
 		{% if form.errors %}<span class="form_error">Por favor, corrija los errores indicados.</span>{% endif %}
 		{% for field in form %}
 		<div class="field_container" id="{{ field.name}}_container">
 			<p><label {% if not field.field.required %} class="optional"{% endif %}for="id_{{ field.name}}">{{ field.label }}:</label></p>
-			{% if field.errors %}<p>{% for error in field.errors %}<span class="form_error">{{ error }}<br/></span>{% endfor %}</p>{% endif %}
 			<p>{{field}}</p>
+			{% if field.errors %}<p>{% for error in field.errors %}<span class="form_error">{{ error }}<br/></span>{% endfor %}</p>{% endif %}
 			{% if field.help_text %}<p>{{field.help_text}}</p>{% endif %}
 			<p/><p/>
 		</div>
 			{% endfor %}
-			<button class="" type="submit" name="" id=""><span><span>{{ submit_value|default:'Enviar'}}</span></span></button>
 	</fieldset>
+	<div class="buttons_container">
+		<input class="ui-state-active" type="submit" value="{{ submit_value|default:'Enviar'}}"/>
+	</div>
 </form>
