--- a/alephuba/templates/base.html
+++ b/alephuba/templates/base.html
@@ -78,7 +78,7 @@
         </div>	
         <!-- // #containerHolder -->
         
-        <p id="footer">© 2011 chacholano. <a href="#">Acerca de alephuba</a> | <a href="#">Contacto</a></p>
+        <p id="footer">© 2011 chacholano. <a href="{% url acerca %}">Acerca de alephuba</a> | <a href="#">Contacto</a></p>
         <!-- Template by <a href="http://www.perspectived.com">perspectived</a>. -->
     </div>
     <!-- // #wrapper -->
