--- a/alephuba/templates/base.html
+++ b/alephuba/templates/base.html
@@ -6,10 +6,11 @@
 
 <!-- CSS -->
 <link href="{{ MEDIA_URL }}css/transdmin.css" rel="stylesheet" type="text/css" media="screen" />
-<link type="text/css" href="{{ MEDIA_URL }}css/custom-theme/jquery-ui-1.8.6.custom.css" rel="stylesheet" />
 
-<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-1.7.1.min.js"></script>
-<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-ui-1.8.6.custom.min.js"></script>
+<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+<link type="text/css" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/base/jquery-ui.css" rel="stylesheet"/>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
 
 {% block extra_head %}{% endblock %}
 
