--- a/alephuba/templates/documentos/add_mirror.html
+++ b/alephuba/templates/documentos/add_mirror.html
@@ -21,31 +21,16 @@
 {% endblock %}
 
 {% block extra_head %}
+<script type="text/javascript" src="{{ MEDIA_URL }}js/archivos.js"></script>
+
 <script type="text/javascript">
 	$(function(){
 		$('#id_fuente').change(mostrar_fuente);
 		mostrar_fuente();
 		
-		//FIXME copy paste
-		$( "#dialog-modal" ).dialog({
-			autoOpen: false,
-			height: 140,
-			modal: true,
-			closeOnEscape : false,
-			resizable : false,
-			open: function(event, ui) { $(".ui-dialog-titlebar-close").hide(); }
-		});
-		
-		$('form').submit(trigger_wait_message);
-		
+		init_dialog();		
 		
 	});
-	
-	function trigger_wait_message() {
-		if($('#id_fuente').val() == 'ARC') {
-			$( "#dialog-modal" ).dialog('open');
-		}
-	}
 	
 	function mostrar_fuente() {
 		if($('#id_fuente').val() == 'ARC') {
