--- a/alephuba/media/css/layout.css
+++ b/alephuba/media/css/layout.css
@@ -233,6 +233,16 @@ h2 {
 #main a { text-decoration: none; color:#646464;}
 
 #main #paginator{ background: #FFFFFF; color:#AAAAAA; text-align: right;}
+#paginator{ background: #FFFFFF; color:#AAAAAA; text-align: right;}
+thead{ background: #FFFFFF;}
+
+#main th {
+	vertical-align: top;
+	padding: 0px 20px;
+	height: 29px;
+	line-height: 29px;
+	border-bottom: 1px solid #ddd;
+	}
 
 /* Footer ---------------------------------------- */
 
@@ -422,4 +432,8 @@ input[type=submit] {
 
 #main a{
 	color: #2f3dc9;
+	}
+
+tr .actions {
+	text-align: right;
 	}
