mail de contacto para usuarios logueados

--- a/alephuba/templates/acerca.html
+++ b/alephuba/templates/acerca.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load mailto %}
+
 {% block content %}
 
 <h2>Acerca de aleph uba</h2>
@@ -21,7 +23,7 @@ Para buscar la información de los libros y sus portadas usamos la <a href="http
 <h3>Como colaborar</h3>
 <p>Como usuario podés colaborar subiendo material, reportando los links caídos, erróneos, etc. 
 También podés comentarnos acerca de errores que encuentres, o mejoras que pensas serían útiles para el sitio.
-Podés hacerlo <a href="#">mandándonos un mail.</a></p>
+Podés hacerlo <a href="mailto:info@be-it.com.ar">mandándonos un mail.</a></p>
 
 <p>Si sos programador o diseñador web podes colaborar mejorando el código, arreglando bugs o implementando nueva funcionalidad.
 El proyecto está disponible en <a href="https://github.com/facundoolano/alephuba">GitHub</a>, si querés colaborar hacé un fork y un pull request.</p>
