--- a/alephuba/templates/documentos/documento.html
+++ b/alephuba/templates/documentos/documento.html
@@ -68,7 +68,7 @@
 
 
 <h3>Archivos</h3>
-<table id="archivos_table">
+<table id="archivos_table" class="aleph">
 <thead><tr><th>Archivo</th><th>Subido por</th><th/></tr></thead>
 {% for archivo in documento.archivo_set.all %}
 <tr {% cycle 'class="odd"' '' %}>
