--- a/alephuba/templates/documentos/documento_list_content.html
+++ b/alephuba/templates/documentos/documento_list_content.html
@@ -1,6 +1,6 @@
 {% load documentostags %}
 
-<table cellpadding="0" cellspacing="0" class="document_list">
+<table cellpadding="0" cellspacing="0" class="document_list aleph">
     {% for documento in object_list %}
 		<tr {% cycle '' 'class="odd"' %}>
 			<td>
