Mejora html, elimino tags innecesarios.

--- a/alephuba/templates/base.html
+++ b/alephuba/templates/base.html
@@ -80,7 +80,7 @@
         </div>	
         <!-- // #containerHolder -->
         
-        <p id="footer">© 2011 chacholano. {% if user.is_authenticated %}<a href="{% url acerca %}">Acerca de alephuba</a> | <a href="mailto:info@be-it.com.ar">Contacto</a>{% endif %}</p>
+        <p id="footer">© 2012 be it. {% if user.is_authenticated %}<a href="{% url acerca %}">Acerca de alephuba</a> | <a href="mailto:info@be-it.com.ar">Contacto</a>{% endif %}</p>
         <!-- Template by <a href="http://www.perspectived.com">perspectived</a>. -->
     </div>
     <!-- // #wrapper -->
