--- a/alephuba/templates/form.html
+++ b/alephuba/templates/form.html
@@ -4,8 +4,11 @@
 		{% if form.errors %}<span class="form_error">Por favor, corrija los errores indicados.</span>{% endif %}
 		{% for field in form %}
 		<div class="field_container" id="{{ field.name}}_container">
-			<p><label {% if not field.field.required %} class="optional"{% endif %}for="id_{{ field.name}}">{{ field.label }}:</label></p>
+			<p class="form-item"><label {% if not field.field.required %} class="optional"{% endif %}for="id_{{ field.name}}">{{ field.label }}:</label></p>
+			{% if field.name == "captcha" %}</br></br></br></br>
 			<p>{{field}}</p>
+			{% else %}<p class="form-item">{{field}}</p>{% endif %}
+			
 			{% if field.errors %}<p>{% for error in field.errors %}<span class="form_error">{{ error }}<br/></span>{% endfor %}</p>{% endif %}
 			{% if field.help_text %}<p>{{field.help_text}}</p>{% endif %}
 		</div>
