Saco google jsapi porque no se esta usando. Agrego alt y size a las imagenes.

--- a/alephuba/media/css/layout.css
+++ b/alephuba/media/css/layout.css
@@ -182,6 +182,11 @@ h2 {
 	float:left;
 }
 
+#main fieldset #cover img {
+	width: 180px;
+	height: 236px;
+}
+
 #main #details {
 	float:left;
 	width: 60%;
