--- a/alephuba/templates/documentos/documento.html
+++ b/alephuba/templates/documentos/documento.html
@@ -47,7 +47,7 @@
 	<fieldset class="display-fieldset">
 		<div>
 			<div id="cover">
-				<img src="{{ documento|book_cover }}" onerror="on_cover_error(this)">
+				<img alt="{{ documento.titulo }}" src="{{ documento|book_cover }}" onerror="on_cover_error(this)">
 			</div>
 			
 			<div id="details">
