--- a/alephuba/templates/comments/form_add_comment.html
+++ b/alephuba/templates/comments/form_add_comment.html
@@ -23,7 +23,7 @@
         </div>
      	{% endfor %}
         
-        <input type="hidden" name="next" value="{{ next }}">
+        <input type="hidden" name="next" value="{{ next }}"/>
 
 	</fieldset>
         <div class="buttons_container">
