--- a/alephuba/templates/documentos/documento_list_content.html
+++ b/alephuba/templates/documentos/documento_list_content.html
@@ -6,7 +6,7 @@
 			<td>
 				<div>
 					<div class="cover">
-						<a href="{% url documento documento.pk %}"><img alt="{{ documento.titulo }}" onerror="on_cover_error(this)" src="{{ documento|book_cover }}"></a>
+						<a href="{% url documento documento.pk %}"><img alt="{{ documento.titulo }}" onerror="on_cover_error(this)" src="{{ documento|book_cover }}"/></a>
 						{% comment %}
 						{% endcomment %}
 					</div>
