--- a/alephuba/templates/base.html
+++ b/alephuba/templates/base.html
@@ -9,13 +9,13 @@
 <link href="{{ MEDIA_URL }}css/layout.css" rel="stylesheet" type="text/css" media="screen" />
 <link type="text/css" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/base/jquery-ui.css" rel="stylesheet"/>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
 
 {% block extra_head %}{% endblock %}
 
 {% if user.is_authenticated %}
-<script>
+<script type="text/javascript">
 	$(function() {
 
 		$( "#id_qs_documento" ).autocomplete({
