--- a/alephuba/templates/documentos/add_mirror.html
+++ b/alephuba/templates/documentos/add_mirror.html
@@ -15,7 +15,7 @@
 	<div id="dialog-modal" title="Subiendo">
 		<p>Por favor, espere mientras subimos el archivo.</p>
 		<br/>
-		<img src="{{ MEDIA_URL }}img/ajax-loader.gif"/>
+		<img alt="Cargando" src="{{ MEDIA_URL }}img/ajax-loader.gif"/>
 	</div>
 
 {% endblock %}
