--- a/alephuba/templates/base.html
+++ b/alephuba/templates/base.html
@@ -16,7 +16,19 @@
 
 {% if user.is_authenticated %}
 <script type="text/javascript">
+
+	function highlightAutocomplete() {
+	    var oldFn = $.ui.autocomplete.prototype._renderItem;
+
+	    $.ui.autocomplete.prototype._renderItem = function (ul, item) {
+            item.label = item.label.replace(new RegExp("(?![^&;]+;)(?!<[^<>]*)(" + $.ui.autocomplete.escapeRegex(this.term) + ")(?![^<>]*>)(?![^&;]+;)", "gi"), "<strong>$1</strong>");
+            return $("<li></li>").data("item.autocomplete", item).append("<a>" + item.label + "</a>").appendTo(ul);
+        };
+	}
+
 	$(function() {
+
+		highlightAutocomplete();
 
 		$( "#id_qs_documento" ).autocomplete({
 			source: "{% url autocomplete_documento %}",
