--- a/alephuba/templates/acerca.html
+++ b/alephuba/templates/acerca.html
@@ -12,11 +12,14 @@ que nos interesan.</p>
 <p><b>No alojamos en nuestros servidores ninguno de los contenidos accesibles desde el sitio</b>, sólo proveemos una forma
 de organizar los archivos subidos por los usuarios, y no nos responsabilizamos por lo que ellos publiquen. 
 Si sos autor o posees los derechos de cualquier material publicado en el sitio y querés que sea retirado, 
-por favor <a href="#">ponete en contacto con nosotros.</a></p>
+por favor <a href="mailto:info@be-it.com.ar">ponete en contacto con nosotros.</a></p>
 
 <p><b>aleph uba</b> está desarrollado con el lenguaje de programación <a href="http://python.org/">Python</a> 
 y el framework web <a href="https://www.djangoproject.com/">django</a>. 
 Para buscar la información de los libros y sus portadas usamos la <a href="http://openlibrary.org/developers/api">API</a> de <a href="http://openlibrary.org">Open Library</a>.
+Los íconos de archivo son parte del <a href="http://www.famfamfam.com/">silk icon set.</a></p>
+
+
 
 <h3>Como colaborar</h3>
 <p>Como usuario podés colaborar subiendo material, reportando los links caídos, erróneos, etc. 
