--- a/alephuba/templates/documentos/documento.html
+++ b/alephuba/templates/documentos/documento.html
@@ -71,8 +71,10 @@
 <table id="archivos_table" class="aleph">
 	<thead>
 		<tr>
-			<th style="width: 60%">Archivo</th>
-			<th style="width: 30%">Subido por</th>
+			<th style="width: 40%">Link de descarga</th>
+			<th>Tipo</th>
+			<th>Tamaño</th>
+			<th>Subido por</th>
 			<th style="width: 10%"></th>
 		</tr>
 	</thead>
@@ -81,12 +83,14 @@
 		{% for archivo in documento.archivo_set.all %}
 			<tr {% cycle 'class="odd"' '' %}>
 				<td><a href="{{ archivo.link  }}" target="_blank">{{ archivo.link  }}</a></td>
+				<td><img src="{{ archivo|file_icon }}" title="{{archivo.extension}}"/></td>
+				<td>{{ archivo.tamanio|filesizeformat }}</td>
 				<td>{{ archivo.subido_por }}</td>
 				<td class="actions"><a href="{% url reportar archivo.pk %}">Reportar</a></td>
 			</tr>
 		{% endfor %}
 		<tr>
-			<td colspan="3" id="paginator"><a href="{% url add_mirror documento.pk%}">Agregar mirror</a></td>
+			<td colspan="5" id="paginator"><a href="{% url add_mirror documento.pk%}">Agregar mirror</a></td>
 		</tr>
 	</tbody>
 </table>
